# LEDStripe

./: .gitmodules  .mxproject  CMakeLists.txt  LEDStripe.ioc  STM32F446ZETx_FLASH.ld
app/: CMakeLists.txt
app/cfg/: board.hpp
app/inc/: main.h  stm32f4xx_it.h
app/inc/hal/: stm32f4xx_hal_conf.h
app/src/: main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c
cmake/stm32cubemx/: CMakeLists.txt
core/: CMakeLists.txt
ext/: CMakeLists.txt  stm32f4xx_hal_driver.cmake
hal/: CMakeLists.txt
hal/inc/: gpiopin.hpp  stm32f446ze.hpp
hal/src/: gpio.cpp
